<resources>
    <string name="facebook_app_id">922935314407962</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Activate by Sign in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="app_name">Smart Secret Santa</string>
    <string name="participantes">Participants</string>
    <string name="meu_presente">My Gift</string>
    <string name="presente_amigo">"My Friend's gift"</string>
    <string name="sortear">Draw</string>
    <string name="reenviar_sms_todos">resend SMS to all</string>
    <string name="msg_sorteio_realizado">The draw has been done. After the date of disclosure will be available the list of secret friends</string>
    <string name="sorteios">Draws</string>
    <string name="dividir_grupos">divide by groups</string>
    <string name="criar_sorteio">Create draw</string>
    <string name="adicionar_participante">Add Participant</string>
    <string name="criar_novo_sorteio">Create new Secret Santa draw</string>
    <string name="sorteios_criados">Draws that I created</string>
    <string name="sorteios_participados">Draws that I participate</string>
    <string name="novo_sorteio">New Draw</string>
    <string name="salvar_presente">Save Gift</string>
    <string name="pergunta_revelacao">When is the disclosure?</string>
    <string name="pergunta_hora_revelacao">What time is the disclosure?</string>
    <string name="pergunta_dia_revelacao">What day is the disclosure?</string>
    <string name="pergunta_valor_presente">What is the maximum value of the gift?</string>
    <string name="pergunta_titulo">Name the Draw</string>
    <string name="criar">Create</string>
    <string name="cancelar">Cancel</string>
    <string name="pergunta_familia">What is the name of the new group?</string>
    <string name="adicionar">Add</string>
    <string name="pergunta_telefone">You must have credits to send the activation message.</string>
    <string name="trocar_numero">Change number</string>
    <string name="ok">OK</string>
    <string name="reenviar_sms">Resend SMS</string>
    <string name="nao_ativar">Do not want to activate the application now</string>
    <string name="txtAviso">Choose how you want to activate.</string>
    <string name="msg_ativar">To use this feature you must activate the application. This can be done by logging in to your Facebook account or sending SMS. Activate it now and see which draws you are participating and which present your secret friend wants to win.</string>
    <string name="label_nome">Name:</string>
    <string name="label_telefone">Phone:</string>
    <string name="label_revelacao">Disclosure:</string>
    <string name="label_titulo">Title:</string>
    <string name="label_valor_presente">Maximum Value of the Gift:</string>
    <string name="label_tirou">Secret Friend:</string>
    <string name="label_codigo_ativacao">Activation Code:</string>
    <string name="part_msg_sorteio">in the draw of the secret friend who will be revealed on</string>
    <string name="msg_mensagens_entregues_todos_participantes">Messages were sent to all participants</string>
    <string name="msg_sorteio_realizado_msgs_entregues">The draw was made and messages were sent to the participants</string>
    <string name="msg_mensagem_enviada_participante">A message was sent to the participant</string>
    <string name="msg_sortio_nao_realizado">The draw has not been done yet</string>
    <string name="msg_amigo_presente">Your friend  did not say yet what he would like to win</string>
    <string name="msg_sem_sorteios">"You don't have any draw created"</string>
    <string name="msg_sem_sorteios_participando">You are not playing in any draw</string>
    <string name="msg_precisa_estar_conectado">You must be connected to the Internet to see the participants in this draw</string>
    <string name="msg_precisa_estar_conectado_participando">You must be connected to the Internet to see the draws that you are participating.</string>
    <string name="msg_informe_presente">Enter the gift</string>
    <string name="msg_presente_salvo_sucesso">Your gift has been successfully saved</string>
    <string name="msg_presente_amigo">Your secret friend said he would like to win a(n)</string>
    <string name="msg_precisa_credito">You must have credits to send the activation message.</string>
    <string name="msg_informe_celular">Enter your mobile number</string>
    <string name="msg_codigo_ativacao_enviado">A message with a number of activation has been sent. enter the number here</string>
    <string name="msg_ativado_sucesso">The Application was successfully activated</string>
    <string name="msg_codigo_incorreto">Incorrect code</string>
    <string name="msg_informe_codigo">Enter the code</string>
    <string name="msg_ao_dividir">By dividing by groups the application prevents people from the same group draw each other</string>
    <string name="msg_proibido_menos_tres_participantes">The draw can not have fewer than three participants</string>
    <string name="ltrl_ativar_agora">Activate Now</string>
    <string name="msg_ativar_sms">Activate by sending SMS</string>
    <string name="hint_meu_presente">Tell your friend what is the gift you want to win</string>
    <string name="hint_telefone_participante">Phone with Area Code</string>
</resources>