<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout_root" android:background="@color/fundo_padrao" android:layout_width="wrap_content" android:layout_height="fill_parent" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@android:color/black" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txtAviso" />
    <LinearLayout android:orientation="vertical" android:id="@id/layout_face" android:background="@color/fundo_padrao" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <Button android:id="@id/envio_sms" android:padding="10.0sp" android:paddingLeft="20.0sp" android:paddingRight="20.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="6.0sp" android:layout_marginRight="15.0dip" android:text="@string/msg_ativar_sms" android:onClick="envioSMS" style="@style/botao" />
    <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/msg_precisa_credito" />
    <LinearLayout android:orientation="vertical" android:id="@id/layout_sms" android:padding="10.0sp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" style="@android:style/Animation.Dialog">
        <TextView android:textColor="@android:color/black" android:gravity="center" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pergunta_telefone" style="@android:color/black" />
        <EditText android:id="@id/editTextDialogUserInput" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_telefone_participante" android:inputType="phone">
            <requestFocus />
        </EditText>
        <EditText android:id="@id/edtAtivacao" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="number">
            <requestFocus />
        </EditText>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:id="@id/ok" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/ok" android:layout_weight="1.0" style="@style/botao" />
            <Button android:id="@id/trocarNumero" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/trocar_numero" android:layout_weight="1.0" style="@style/botao" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>