<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/containerListar" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="?android:dividerHorizontal" android:animateLayoutChanges="true" android:showDividers="middle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:id="@id/containerReenviar" android:background="@color/red_dark" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0sp">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/txtReenviar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/msg_sorteio_realizado" android:layout_weight="1.0" />
    </LinearLayout>
    <Button android:id="@id/btnReenviarTodos" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0sp" android:layout_marginBottom="20.0sp" android:text="@string/reenviar_sms_todos" android:onClick="reenviarTodos" style="@style/botao" />
    <Button android:id="@id/btnSortear" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0sp" android:layout_marginBottom="20.0sp" android:text="@string/sortear" android:onClick="sortear" style="@style/botao" />
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0sp" android:text="@string/participantes" />
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/black" android:layout_gravity="top|center" android:id="@id/empty" android:paddingTop="30.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_sem_sorteios_participando" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:dividerHeight="5.0sp" android:animateLayoutChanges="true" />
    </ScrollView>
</LinearLayout>