<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout_root" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@android:style/Animation.Dialog"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pergunta_familia" />
    <EditText android:id="@id/editTextDialogUserInput" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text">
        <requestFocus />
    </EditText>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/adicionar" android:layout_weight="1.0" android:onClick="criar" style="@style/botao" />
        <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/cancelar" android:layout_weight="1.0" android:onClick="cancelar" style="@style/botao" />
    </LinearLayout>
</LinearLayout>