<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/linear" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:background="@color/red_dark" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo_action_bar_pq" android:contentDescription="@android:string/yes" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/tituloCustom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/meu_presente" android:layout_weight="1.0" />
        <ImageView android:id="@id/imgFecha" android:paddingTop="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/delete" android:layout_weight="3.0" android:contentDescription="@android:string/yes" />
    </LinearLayout>
    <EditText android:id="@id/edtPresente" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_meu_presente" android:lines="5" android:inputType="textMultiLine" style="@android:style/Widget.EditText" />
    <Button android:id="@id/btnPresente" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/salvar_presente" style="@style/botao" />
</LinearLayout>