<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/container" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0sp">
                <Button android:gravity="center" android:layout_gravity="center" android:id="@id/btnAdd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adicionar_participante" android:onClick="addView" style="@style/retangulo" />
                <Button android:gravity="center" android:layout_gravity="center" android:id="@id/btnSalvar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/criar_sorteio" android:onClick="criarSorteio" style="@style/retangulo" />
            </LinearLayout>
            <CheckBox android:gravity="center" android:id="@id/chkb_dividir" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dividir_grupos" />
            <View android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="5.0sp" android:layout_marginBottom="10.0sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>