<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:background="@drawable/teste" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0sp" android:src="@drawable/icon_person" />
    <LinearLayout android:orientation="vertical" android:id="@id/container_fragment" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_nome" style="@style/label_branca" />
            <TextView android:id="@id/txtNomeParticipante" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0sp" style="@style/label_branca" />
            <TextView android:id="@id/txtFamiliaParticipate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="1.0sp" style="@style/label_branca" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_telefone" style="@style/label_branca" />
            <TextView android:id="@id/txtTelefoneParticipante" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0sp" style="@style/label_branca" />
        </LinearLayout>
        <TextView android:id="@id/txtSorteado" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sortear" />
    </LinearLayout>
</LinearLayout>